[package]
name = "subtale-cortex"
version = "0.1.0"
edition = "2021"
authors = ["Luke Carr <luke@subtale.com>"]
description = "Crash handling for Rust applications"
homepage = "https://cortex.subtale.com"
repository = "https://github.com/subtalegames/cortex"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dev-dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "x11",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_gltf",
    "bevy_scene",
    "bevy_pbr",
    "png",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "multi-threaded",
] }
native-dialog = "0.7"
